--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,11 @@
+version: 2.1
 jobs:
   build:
+    docker:
+      - image: golangci/golangci-lint:v1.50
     working_directory: /go/src/washing-ocr
-    <<: *defaults
     steps:
-      - run:
-          name: Install curl
-          command: RUN apk update && apk add git
-      - run:
-          name: Install Docker Compose
-          command: |
-            sudo curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            sudo chmod +x ~/docker-compose
-            sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - checkout
-      - setup_remote_docker
       - run:
-          name: run golangci-lint
-          command: make ci-lint
+          name: golangci-lint
+          command: golangci-lint run
