--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: "3" #composeファイルのバージョン
+version: "3"
 services: 
-  washing-ocr: # サービス名
-    build: # ビルドに使うDockerファイルのパス
+  washing-ocr:
+    build:
       context: .
-      dockerfile: ./build/Dockerfile
-    tty: true # コンテナの永続化
+      dockerfile: ./Dockerfile.dev
+    tty: true
     volumes:
-      - ./cmd:/go/src/app # マウントディレクトリ
+      - .:/go/src/app
