make sample ddd architecture

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
       context: .
       dockerfile: ./Dockerfile.dev
     tty: true
+    ports:
+      - "8080:8080"
     volumes:
       - .:/go/src/app
