--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,16 @@
 # goのバージョン
 FROM golang:1.19.3-alpine
-# アップデートとgitのインストール
-RUN apk update && apk add git
 # golangci-lintのインストール
 RUN wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.35.0
-# appディレクトリの作成
-RUN mkdir /go/src/app
-# ワーキングディレクトリの設定
+
 WORKDIR /go/src/app
-# ホストのファイルをコンテナの作業ディレクトリに移行
-ADD . /go/src/app
+
+COPY . .
+
+RUN go mod download
+
+RUN go build -o /docker-gs-ping
+
+EXPOSE 8080
+
+CMD [ "/docker-gs-ping" ]
